@@ -24,6 +24,7 @@ import android.widget.Toast;
 
 import com.tycho.app.primenumberfinder.ProgressDialog;
 import com.tycho.app.primenumberfinder.R;
+import com.tycho.app.primenumberfinder.Savable;
 import com.tycho.app.primenumberfinder.modules.ResultsFragment;
 import com.tycho.app.primenumberfinder.modules.findfactors.FindFactorsTask;
 import com.tycho.app.primenumberfinder.modules.findfactors.adapters.FactorsListAdapter;
@@ -207,7 +208,7 @@ public class FindFactorsResultsFragment extends ResultsFragment{
         saveButton.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                saveTask();
+                saveTask(getTask());
             }
         });
 
@@ -216,22 +217,38 @@ public class FindFactorsResultsFragment extends ResultsFragment{
         return rootView;
     }
 
-    public void saveTask(){
+    public void saveTask(final FindFactorsTask task){
         final ProgressDialog progressDialog = new ProgressDialog(getActivity());
         progressDialog.setTitle("Saving...");
         progressDialog.show();
 
-        new Thread(new Runnable() {
+        task.addSavableCallbacks(new Savable.SavableCallbacks() {
             @Override
-            public void run() {
-                final boolean success = FileManager.getInstance().saveFactors(getTask().getFactors(), getTask().getNumber());
+            public void onSaved() {
+                progressDialog.dismiss();
                 handler.post(new Runnable() {
                     @Override
                     public void run() {
-                        Toast.makeText(getActivity(), success ? getString(R.string.successfully_saved_file) : getString(R.string.error_saving_file), Toast.LENGTH_SHORT).show();
+                        Toast.makeText(getActivity(), getString(R.string.successfully_saved_file), Toast.LENGTH_SHORT).show();
                     }
                 });
-                progressDialog.dismiss();
+            }
+
+            @Override
+            public void onError() {
+                handler.post(new Runnable() {
+                    @Override
+                    public void run() {
+                        Toast.makeText(getActivity(), "Error saving file!", Toast.LENGTH_SHORT).show();
+                    }
+                });
+            }
+        });
+
+        new Thread(new Runnable() {
+            @Override
+            public void run() {
+                task.save();
             }
         }).start();
     }
