@@ -15,6 +15,7 @@ import android.widget.TextView;
 import com.tycho.app.primenumberfinder.ActionViewListener;
 import com.tycho.app.primenumberfinder.PrimeNumberFinder;
 import com.tycho.app.primenumberfinder.R;
+import com.tycho.app.primenumberfinder.Savable;
 import com.tycho.app.primenumberfinder.modules.AbstractTaskListAdapter;
 import com.tycho.app.primenumberfinder.modules.findprimes.CheckPrimalityTask;
 import com.tycho.app.primenumberfinder.modules.findprimes.FindPrimesTask;
@@ -100,6 +101,19 @@ public class FindPrimesTaskListFragment extends Fragment{
     }
 
     public void addTask(final Task task) {
+        if (task instanceof FindPrimesTask){
+            ((FindPrimesTask) task).addSavableCallbacks(new Savable.SavableCallbacks() {
+                @Override
+                public void onSaved() {
+                    taskListAdapter.setSaved(task);
+                }
+
+                @Override
+                public void onError() {
+
+                }
+            });
+        }
         taskListAdapter.addTask(task);
         recyclerView.scrollToPosition(taskListAdapter.getItemCount() - 1);
         update();
