@@ -15,6 +15,7 @@ import android.widget.TextView;
 import com.tycho.app.primenumberfinder.ActionViewListener;
 import com.tycho.app.primenumberfinder.PrimeNumberFinder;
 import com.tycho.app.primenumberfinder.R;
+import com.tycho.app.primenumberfinder.Savable;
 import com.tycho.app.primenumberfinder.modules.AbstractTaskListAdapter;
 import com.tycho.app.primenumberfinder.modules.primefactorization.PrimeFactorizationTask;
 import com.tycho.app.primenumberfinder.modules.primefactorization.adapters.PrimeFactorizationTaskListAdapter;
@@ -98,7 +99,18 @@ public class PrimeFactorizationTaskListFragment extends Fragment{
         outState.putInt("selectedItemPosition", taskListAdapter.getSelectedItemPosition());
     }
 
-    public void addTask(final Task task) {
+    public void addTask(final PrimeFactorizationTask task) {
+        task.addSavableCallbacks(new Savable.SavableCallbacks() {
+            @Override
+            public void onSaved() {
+                taskListAdapter.setSaved(task);
+            }
+
+            @Override
+            public void onError() {
+
+            }
+        });
         taskListAdapter.addTask(task);
         update();
     }
