@@ -47,7 +47,7 @@
     <string name="no_tasks_message">No tasks. Start one with the buttons above or the floating action button.</string>
     <string name="no_task_selected_message">Select a task to view its status and results.</string>
     <string name="find_primes_task_list_item_title">Primes from %1$s to %2$s</string>
-    <string name="check_primality_subtitle_searching">Checking the primality of %1$s.</string>
+    <string name="check_primality_subtitle_searching">Primality of %1$s</string>
     <string name="primes_list_toast_message">%1$s is the %2$s number.</string>
 
     <!-- Find factors page -->
