@@ -111,4 +111,5 @@
 - Bug fixes
 
 05/??/2018 > Prime Number Finder version 1.3.5
+- You can now save tasks directly from the task list
 - Minor UI improvements
